Fixed spacing issue on OL as well as maintaining center and proper width in DW

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -193,6 +193,11 @@ a {
 	width: 100%;
 }
 
+.wrapper > tr {
+	margin: 0;
+	padding: 0;
+}
+
 .layout_two-column {
 	display: block;
 }
